syntax = "proto3";

package com.github.dweidenfeld.services;

service ExampleService {
    rpc Hello(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    string message = 1;
}

message HelloResponse {
    string message = 1;
}
